; ModuleID = '/home/carl/AnghaBench/git/extr_notes.c_format_display_notes.c'
source_filename = "/home/carl/AnghaBench/git/extr_notes.c_format_display_notes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }
%struct.strbuf = type { i32 }

@display_notes_trees = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @format_display_notes(%struct.object_id* %0, %struct.strbuf* %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.object_id*, align 8
  %6 = alloca %struct.strbuf*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.object_id* %0, %struct.object_id** %5, align 8
  store %struct.strbuf* %1, %struct.strbuf** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i64*, i64** @display_notes_trees, align 8
  %11 = call i32 @assert(i64* %10)
  store i32 0, i32* %9, align 4
  br label %12

12:                                               ; preds = %30, %4
  %13 = load i64*, i64** @display_notes_trees, align 8
  %14 = load i32, i32* %9, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i64, i64* %13, i64 %15
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %33

19:                                               ; preds = %12
  %20 = load i64*, i64** @display_notes_trees, align 8
  %21 = load i32, i32* %9, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i64, i64* %20, i64 %22
  %24 = load i64, i64* %23, align 8
  %25 = load %struct.object_id*, %struct.object_id** %5, align 8
  %26 = load %struct.strbuf*, %struct.strbuf** %6, align 8
  %27 = load i8*, i8** %7, align 8
  %28 = load i32, i32* %8, align 4
  %29 = call i32 @format_note(i64 %24, %struct.object_id* %25, %struct.strbuf* %26, i8* %27, i32 %28)
  br label %30

30:                                               ; preds = %19
  %31 = load i32, i32* %9, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %9, align 4
  br label %12

33:                                               ; preds = %12
  ret void
}

declare dso_local i32 @assert(i64*) #1

declare dso_local i32 @format_note(i64, %struct.object_id*, %struct.strbuf*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
